regras-firewall/iptables-files/iptables-first_rule-1000
# Generated by iptables-save v1.4.21 on Wed Nov 22 12:59:11 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 10.127.0.0/16 -j ACCEPT
-A INPUT -s 10.128.0.0/12 -j ACCEPT
-A FORWARD -s 10.127.0.0/16 -j ACCEPT
-A FORWARD -s 10.128.0.0/12 -j ACCEPT
-A FORWARD -s 10.170.3.227/32 -d 10.170.3.245/32 -m comment --comment "rule 0 - allow access between endpoints" -j ACCEPT
-A FORWARD -s 10.170.3.245/32 -d 10.170.3.227/32 -m comment --comment "rule 0 - allow access between endpoints" -j ACCEPT
-A FORWARD -s 10.0.0.0/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.1/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 2 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.2/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 3 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.3/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 4 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.4/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 5 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.5/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 6 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.6/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 7 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.7/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 8 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.8/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 9 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.9/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 10 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.10/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 11 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.11/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 12 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.12/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 13 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.13/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 14 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.14/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 15 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.15/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 16 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.16/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 17 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.17/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 18 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.18/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 19 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.19/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 20 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.20/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 21 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.21/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 22 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.22/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 23 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.23/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 24 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.24/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 25 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.25/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 26 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.26/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 27 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.27/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 28 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.28/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 29 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.29/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 30 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.30/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 31 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.31/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 32 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.32/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 33 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.33/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 34 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.34/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 35 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.35/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 36 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.36/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 37 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.37/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 38 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.38/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 39 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.39/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 40 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.40/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 41 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.41/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 42 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.42/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 43 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.43/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 44 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.44/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 45 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.45/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 46 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.46/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 47 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.47/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 48 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.48/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 49 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.49/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 50 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.50/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 51 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.51/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 52 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.52/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 53 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.53/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 54 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.54/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 55 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.55/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 56 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.56/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 57 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.57/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 58 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.58/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 59 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.59/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 60 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.60/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 61 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.61/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 62 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.62/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 63 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.63/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 64 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.64/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 65 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.65/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 66 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.66/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 67 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.67/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 68 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.68/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 69 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.69/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 70 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.70/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 71 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.71/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 72 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.72/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 73 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.73/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 74 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.74/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 75 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.75/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 76 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.76/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 77 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.77/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 78 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.78/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 79 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.79/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 80 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.80/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 81 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.81/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 82 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.82/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 83 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.83/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 84 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.84/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 85 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.85/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 86 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.86/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 87 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.87/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 88 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.88/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 89 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.89/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 90 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.90/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 91 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.91/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 92 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.92/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 93 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.93/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 94 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.94/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 95 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.95/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 96 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.96/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 97 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.97/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 98 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.98/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 99 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.99/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 100 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.100/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 101 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.101/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 102 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.102/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 103 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.103/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 104 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.104/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 105 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.105/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 106 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.106/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 107 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.107/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 108 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.108/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 109 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.109/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 110 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.110/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 111 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.111/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 112 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.112/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 113 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.113/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 114 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.114/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 115 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.115/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 116 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.116/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 117 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.117/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 118 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.118/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 119 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.119/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 120 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.120/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 121 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.121/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 122 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.122/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 123 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.123/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 124 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.124/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 125 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.125/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 126 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.126/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 127 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.127/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 128 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.128/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 129 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.129/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 130 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.130/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 131 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.131/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 132 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.132/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 133 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.133/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 134 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.134/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 135 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.135/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 136 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.136/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 137 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.137/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 138 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.138/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 139 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.139/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 140 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.140/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 141 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.141/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 142 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.142/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 143 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.143/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 144 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.144/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 145 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.145/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 146 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.146/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 147 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.147/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 148 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.148/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 149 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.149/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 150 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.150/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 151 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.151/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 152 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.152/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 153 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.153/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 154 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.154/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 155 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.155/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 156 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.156/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 157 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.157/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 158 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.158/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 159 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.159/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 160 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.160/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 161 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.161/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 162 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.162/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 163 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.163/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 164 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.164/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 165 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.165/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 166 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.166/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 167 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.167/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 168 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.168/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 169 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.169/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 170 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.170/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 171 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.171/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 172 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.172/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 173 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.173/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 174 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.174/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 175 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.175/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 176 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.176/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 177 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.177/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 178 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.178/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 179 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.179/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 180 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.180/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 181 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.181/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 182 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.182/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 183 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.183/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 184 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.184/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 185 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.185/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 186 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.186/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 187 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.187/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 188 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.188/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 189 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.189/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 190 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.190/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 191 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.191/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 192 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.192/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 193 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.193/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 194 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.194/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 195 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.195/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 196 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.196/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 197 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.197/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 198 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.198/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 199 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.199/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 200 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.200/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 201 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.201/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 202 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.202/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 203 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.203/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 204 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.204/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 205 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.205/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 206 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.206/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 207 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.207/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 208 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.208/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 209 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.209/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 210 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.210/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 211 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.211/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 212 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.212/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 213 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.213/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 214 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.214/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 215 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.215/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 216 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.216/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 217 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.217/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 218 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.218/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 219 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.219/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 220 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.220/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 221 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.221/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 222 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.222/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 223 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.223/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 224 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.224/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 225 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.225/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 226 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.226/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 227 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.227/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 228 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.228/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 229 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.229/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 230 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.230/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 231 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.231/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 232 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.232/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 233 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.233/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 234 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.234/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 235 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.235/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 236 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.236/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 237 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.237/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 238 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.238/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 239 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.239/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 240 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.240/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 241 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.241/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 242 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.242/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 243 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.243/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 244 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.244/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 245 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.245/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 246 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.246/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 247 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.247/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 248 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.248/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 249 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.249/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 250 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.250/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 251 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.251/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 252 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.252/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 253 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.253/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 254 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.254/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 255 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.255/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 256 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.0/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 257 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.1/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 258 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.2/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 259 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.3/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 260 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.4/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 261 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.5/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 262 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.6/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 263 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.7/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 264 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.8/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 265 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.9/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 266 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.10/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 267 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.11/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 268 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.12/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 269 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.13/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 270 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.14/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 271 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.15/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 272 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.16/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 273 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.17/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 274 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.18/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 275 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.19/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 276 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.20/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 277 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.21/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 278 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.22/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 279 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.23/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 280 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.24/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 281 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.25/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 282 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.26/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 283 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.27/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 284 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.28/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 285 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.29/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 286 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.30/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 287 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.31/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 288 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.32/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 289 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.33/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 290 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.34/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 291 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.35/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 292 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.36/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 293 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.37/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 294 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.38/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 295 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.39/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 296 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.40/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 297 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.41/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 298 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.42/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 299 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.43/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 300 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.44/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 301 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.45/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 302 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.46/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 303 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.47/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 304 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.48/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 305 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.49/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 306 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.50/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 307 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.51/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 308 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.52/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 309 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.53/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 310 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.54/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 311 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.55/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 312 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.56/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 313 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.57/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 314 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.58/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 315 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.59/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 316 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.60/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 317 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.61/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 318 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.62/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 319 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.63/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 320 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.64/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 321 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.65/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 322 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.66/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 323 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.67/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 324 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.68/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 325 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.69/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 326 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.70/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 327 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.71/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 328 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.72/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 329 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.73/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 330 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.74/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 331 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.75/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 332 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.76/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 333 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.77/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 334 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.78/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 335 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.79/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 336 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.80/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 337 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.81/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 338 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.82/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 339 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.83/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 340 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.84/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 341 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.85/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 342 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.86/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 343 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.87/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 344 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.88/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 345 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.89/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 346 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.90/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 347 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.91/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 348 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.92/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 349 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.93/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 350 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.94/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 351 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.95/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 352 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.96/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 353 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.97/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 354 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.98/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 355 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.99/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 356 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.100/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 357 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.101/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 358 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.102/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 359 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.103/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 360 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.104/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 361 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.105/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 362 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.106/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 363 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.107/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 364 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.108/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 365 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.109/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 366 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.110/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 367 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.111/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 368 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.112/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 369 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.113/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 370 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.114/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 371 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.115/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 372 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.116/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 373 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.117/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 374 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.118/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 375 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.119/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 376 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.120/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 377 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.121/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 378 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.122/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 379 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.123/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 380 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.124/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 381 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.125/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 382 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.126/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 383 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.127/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 384 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.128/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 385 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.129/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 386 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.130/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 387 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.131/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 388 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.132/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 389 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.133/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 390 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.134/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 391 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.135/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 392 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.136/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 393 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.137/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 394 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.138/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 395 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.139/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 396 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.140/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 397 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.141/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 398 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.142/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 399 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.143/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 400 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.144/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 401 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.145/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 402 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.146/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 403 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.147/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 404 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.148/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 405 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.149/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 406 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.150/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 407 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.151/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 408 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.152/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 409 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.153/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 410 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.154/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 411 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.155/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 412 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.156/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 413 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.157/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 414 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.158/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 415 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.159/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 416 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.160/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 417 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.161/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 418 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.162/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 419 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.163/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 420 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.164/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 421 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.165/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 422 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.166/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 423 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.167/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 424 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.168/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 425 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.169/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 426 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.170/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 427 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.171/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 428 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.172/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 429 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.173/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 430 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.174/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 431 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.175/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 432 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.176/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 433 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.177/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 434 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.178/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 435 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.179/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 436 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.180/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 437 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.181/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 438 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.182/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 439 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.183/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 440 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.184/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 441 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.185/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 442 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.186/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 443 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.187/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 444 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.188/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 445 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.189/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 446 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.190/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 447 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.191/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 448 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.192/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 449 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.193/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 450 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.194/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 451 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.195/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 452 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.196/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 453 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.197/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 454 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.198/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 455 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.199/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 456 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.200/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 457 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.201/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 458 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.202/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 459 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.203/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 460 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.204/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 461 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.205/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 462 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.206/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 463 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.207/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 464 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.208/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 465 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.209/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 466 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.210/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 467 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.211/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 468 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.212/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 469 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.213/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 470 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.214/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 471 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.215/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 472 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.216/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 473 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.217/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 474 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.218/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 475 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.219/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 476 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.220/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 477 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.221/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 478 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.222/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 479 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.223/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 480 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.224/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 481 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.225/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 482 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.226/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 483 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.227/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 484 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.228/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 485 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.229/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 486 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.230/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 487 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.231/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 488 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.232/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 489 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.233/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 490 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.234/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 491 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.235/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 492 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.236/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 493 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.237/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 494 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.238/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 495 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.239/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 496 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.240/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 497 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.241/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 498 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.242/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 499 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.243/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 500 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.244/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 501 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.245/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 502 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.246/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 503 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.247/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 504 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.248/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 505 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.249/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 506 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.250/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 507 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.251/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 508 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.252/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 509 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.253/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 510 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.254/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 511 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.255/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 512 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.0/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 513 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.1/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 514 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.2/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 515 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.3/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 516 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.4/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 517 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.5/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 518 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.6/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 519 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.7/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 520 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.8/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 521 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.9/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 522 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.10/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 523 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.11/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 524 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.12/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 525 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.13/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 526 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.14/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 527 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.15/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 528 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.16/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 529 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.17/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 530 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.18/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 531 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.19/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 532 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.20/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 533 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.21/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 534 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.22/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 535 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.23/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 536 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.24/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 537 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.25/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 538 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.26/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 539 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.27/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 540 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.28/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 541 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.29/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 542 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.30/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 543 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.31/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 544 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.32/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 545 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.33/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 546 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.34/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 547 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.35/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 548 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.36/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 549 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.37/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 550 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.38/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 551 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.39/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 552 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.40/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 553 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.41/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 554 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.42/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 555 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.43/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 556 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.44/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 557 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.45/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 558 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.46/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 559 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.47/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 560 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.48/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 561 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.49/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 562 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.50/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 563 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.51/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 564 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.52/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 565 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.53/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 566 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.54/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 567 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.55/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 568 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.56/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 569 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.57/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 570 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.58/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 571 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.59/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 572 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.60/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 573 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.61/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 574 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.62/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 575 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.63/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 576 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.64/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 577 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.65/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 578 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.66/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 579 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.67/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 580 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.68/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 581 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.69/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 582 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.70/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 583 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.71/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 584 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.72/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 585 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.73/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 586 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.74/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 587 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.75/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 588 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.76/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 589 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.77/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 590 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.78/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 591 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.79/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 592 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.80/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 593 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.81/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 594 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.82/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 595 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.83/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 596 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.84/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 597 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.85/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 598 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.86/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 599 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.87/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 600 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.88/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 601 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.89/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 602 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.90/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 603 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.91/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 604 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.92/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 605 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.93/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 606 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.94/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 607 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.95/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 608 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.96/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 609 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.97/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 610 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.98/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 611 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.99/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 612 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.100/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 613 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.101/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 614 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.102/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 615 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.103/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 616 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.104/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 617 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.105/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 618 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.106/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 619 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.107/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 620 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.108/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 621 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.109/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 622 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.110/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 623 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.111/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 624 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.112/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 625 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.113/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 626 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.114/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 627 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.115/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 628 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.116/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 629 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.117/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 630 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.118/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 631 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.119/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 632 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.120/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 633 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.121/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 634 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.122/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 635 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.123/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 636 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.124/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 637 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.125/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 638 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.126/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 639 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.127/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 640 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.128/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 641 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.129/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 642 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.130/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 643 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.131/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 644 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.132/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 645 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.133/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 646 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.134/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 647 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.135/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 648 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.136/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 649 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.137/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 650 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.138/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 651 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.139/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 652 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.140/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 653 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.141/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 654 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.142/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 655 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.143/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 656 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.144/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 657 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.145/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 658 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.146/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 659 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.147/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 660 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.148/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 661 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.149/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 662 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.150/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 663 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.151/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 664 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.152/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 665 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.153/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 666 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.154/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 667 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.155/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 668 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.156/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 669 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.157/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 670 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.158/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 671 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.159/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 672 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.160/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 673 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.161/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 674 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.162/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 675 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.163/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 676 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.164/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 677 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.165/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 678 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.166/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 679 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.167/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 680 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.168/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 681 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.169/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 682 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.170/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 683 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.171/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 684 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.172/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 685 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.173/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 686 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.174/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 687 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.175/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 688 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.176/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 689 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.177/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 690 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.178/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 691 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.179/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 692 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.180/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 693 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.181/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 694 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.182/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 695 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.183/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 696 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.184/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 697 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.185/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 698 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.186/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 699 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.187/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 700 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.188/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 701 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.189/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 702 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.190/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 703 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.191/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 704 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.192/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 705 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.193/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 706 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.194/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 707 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.195/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 708 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.196/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 709 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.197/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 710 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.198/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 711 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.199/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 712 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.200/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 713 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.201/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 714 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.202/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 715 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.203/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 716 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.204/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 717 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.205/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 718 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.206/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 719 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.207/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 720 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.208/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 721 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.209/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 722 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.210/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 723 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.211/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 724 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.212/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 725 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.213/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 726 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.214/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 727 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.215/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 728 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.216/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 729 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.217/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 730 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.218/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 731 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.219/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 732 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.220/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 733 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.221/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 734 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.222/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 735 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.223/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 736 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.224/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 737 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.225/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 738 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.226/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 739 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.227/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 740 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.228/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 741 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.229/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 742 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.230/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 743 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.231/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 744 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.232/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 745 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.233/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 746 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.234/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 747 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.235/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 748 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.236/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 749 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.237/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 750 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.238/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 751 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.239/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 752 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.240/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 753 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.241/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 754 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.242/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 755 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.243/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 756 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.244/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 757 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.245/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 758 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.246/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 759 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.247/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 760 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.248/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 761 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.249/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 762 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.250/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 763 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.251/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 764 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.252/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 765 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.253/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 766 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.254/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 767 --> without match" -j ACCEPT
-A FORWARD -s 10.0.2.255/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 768 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.0/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 769 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.1/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 770 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.2/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 771 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.3/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 772 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.4/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 773 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.5/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 774 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.6/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 775 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.7/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 776 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.8/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 777 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.9/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 778 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.10/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 779 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.11/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 780 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.12/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 781 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.13/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 782 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.14/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 783 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.15/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 784 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.16/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 785 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.17/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 786 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.18/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 787 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.19/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 788 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.20/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 789 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.21/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 790 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.22/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 791 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.23/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 792 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.24/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 793 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.25/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 794 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.26/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 795 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.27/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 796 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.28/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 797 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.29/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 798 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.30/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 799 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.31/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 800 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.32/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 801 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.33/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 802 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.34/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 803 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.35/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 804 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.36/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 805 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.37/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 806 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.38/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 807 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.39/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 808 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.40/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 809 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.41/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 810 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.42/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 811 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.43/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 812 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.44/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 813 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.45/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 814 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.46/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 815 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.47/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 816 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.48/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 817 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.49/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 818 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.50/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 819 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.51/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 820 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.52/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 821 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.53/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 822 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.54/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 823 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.55/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 824 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.56/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 825 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.57/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 826 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.58/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 827 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.59/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 828 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.60/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 829 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.61/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 830 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.62/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 831 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.63/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 832 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.64/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 833 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.65/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 834 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.66/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 835 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.67/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 836 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.68/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 837 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.69/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 838 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.70/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 839 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.71/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 840 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.72/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 841 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.73/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 842 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.74/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 843 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.75/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 844 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.76/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 845 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.77/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 846 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.78/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 847 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.79/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 848 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.80/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 849 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.81/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 850 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.82/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 851 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.83/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 852 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.84/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 853 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.85/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 854 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.86/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 855 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.87/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 856 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.88/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 857 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.89/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 858 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.90/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 859 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.91/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 860 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.92/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 861 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.93/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 862 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.94/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 863 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.95/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 864 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.96/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 865 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.97/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 866 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.98/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 867 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.99/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 868 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.100/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 869 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.101/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 870 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.102/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 871 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.103/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 872 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.104/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 873 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.105/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 874 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.106/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 875 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.107/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 876 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.108/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 877 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.109/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 878 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.110/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 879 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.111/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 880 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.112/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 881 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.113/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 882 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.114/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 883 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.115/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 884 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.116/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 885 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.117/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 886 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.118/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 887 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.119/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 888 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.120/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 889 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.121/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 890 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.122/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 891 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.123/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 892 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.124/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 893 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.125/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 894 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.126/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 895 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.127/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 896 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.128/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 897 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.129/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 898 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.130/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 899 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.131/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 900 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.132/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 901 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.133/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 902 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.134/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 903 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.135/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 904 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.136/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 905 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.137/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 906 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.138/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 907 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.139/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 908 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.140/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 909 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.141/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 910 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.142/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 911 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.143/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 912 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.144/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 913 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.145/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 914 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.146/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 915 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.147/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 916 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.148/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 917 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.149/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 918 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.150/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 919 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.151/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 920 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.152/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 921 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.153/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 922 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.154/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 923 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.155/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 924 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.156/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 925 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.157/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 926 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.158/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 927 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.159/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 928 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.160/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 929 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.161/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 930 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.162/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 931 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.163/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 932 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.164/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 933 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.165/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 934 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.166/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 935 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.167/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 936 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.168/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 937 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.169/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 938 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.170/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 939 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.171/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 940 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.172/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 941 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.173/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 942 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.174/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 943 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.175/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 944 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.176/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 945 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.177/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 946 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.178/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 947 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.179/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 948 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.180/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 949 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.181/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 950 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.182/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 951 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.183/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 952 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.184/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 953 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.185/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 954 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.186/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 955 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.187/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 956 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.188/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 957 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.189/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 958 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.190/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 959 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.191/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 960 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.192/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 961 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.193/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 962 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.194/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 963 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.195/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 964 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.196/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 965 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.197/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 966 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.198/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 967 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.199/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 968 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.200/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 969 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.201/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 970 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.202/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 971 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.203/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 972 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.204/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 973 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.205/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 974 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.206/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 975 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.207/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 976 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.208/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 977 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.209/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 978 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.210/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 979 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.211/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 980 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.212/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 981 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.213/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 982 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.214/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 983 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.215/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 984 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.216/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 985 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.217/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 986 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.218/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 987 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.219/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 988 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.220/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 989 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.221/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 990 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.222/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 991 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.223/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 992 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.224/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 993 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.225/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 994 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.226/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 995 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.227/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 996 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.228/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 997 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.229/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 998 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.230/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 999 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.231/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1000 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.232/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1001 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.233/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1002 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.234/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1003 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.235/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1004 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.236/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1005 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.237/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1006 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.238/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1007 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.239/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1008 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.240/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1009 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.241/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1010 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.242/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1011 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.243/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1012 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.244/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1013 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.245/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1014 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.246/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1015 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.247/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1016 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.248/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1017 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.249/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1018 --> without match" -j ACCEPT
-A FORWARD -s 10.0.3.250/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1019 --> without match" -j ACCEPT
-A OUTPUT -s 10.127.0.0/16 -j ACCEPT
-A OUTPUT -s 10.128.0.0/12 -j ACCEPT
COMMIT
# Completed on Wed Nov 22 12:59:11 2017
